--- a/main.html
+++ b/main.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document.mainPage</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <div id="top-nav">
+            <a href="main.html"><img src="./img/logo.svg"></a>
+            <ul>
+                <li><a href="#">球員</a></li>
+                <li><a href="#">季後賽及太空人</a></li>
+                <li><a href="#">數據與戰績</a></li>
+                <li><a href="#">比賽結果</a></li>
+                <li><a href="#">關鍵人物</a></li>
+                <li><a href="#">精彩回顧</a></li>
+            </ul>      
+    </div>
+
+    <div id="nav-bot">
+        <img src="./img/top_bg.jpeg">
+    </div>
+    
     
 </body>
 </html>
