--- a/main.html
+++ b/main.html
@@ -17,12 +17,36 @@
         <a href="#">比賽結果</a>
         <a href="#">關鍵人物</a>
         <a href="#">精彩回顧</a>
-        
+
+    </div>
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides slide-in-from-left">
+            <img src="./img/slide1.jpeg" style="width:100%">
+        </div>
+
+        <div class="mySlides slide-in-from-left">
+            <img src="./img/slide2.png" style="width:100%">
+        </div>
+
+        <div class="mySlides slide-in-from-left">
+            <img src="./img/slide3.png" style="width:100%">
+        </div>
+
+    </div>
+    <!-- <br> -->
+    <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
     </div>
 
-    <div id="nav-bot">
+
+    <!-- <div id="nav-bot">
         <img src="./img/top_bg.jpeg">
-    </div>
+    </div> -->
 
     <script src="main.js"></script>
 </body>
