--- a/main.html
+++ b/main.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 <body>
   <div id="navabove" style="background-color: #003278;">
@@ -26,6 +30,8 @@
     </div>
   </div>
   <!-- <br> -->
+  <div class="outercontainer">
+
   <div class="slideshow-container">
 
     <div class="mySlides">
@@ -51,13 +57,78 @@
   </div>
 
   <br><br>
+  <div id="appad">
+    <img src="./img/mlbad.png" alt="">
+  </div>
 
   <div id="bracket">
     <h1>2023MLB季後賽分組</h1>
     <img src="./img/bracket.jpeg" alt="">
   </div>
 
+  <br><br>
+  
+  		
+  <div id="standings">
+    <div class="column">
+      <table>
+        <tr>
+          <th>球隊</th>
+          <th>出賽數</th>
+          <th>勝-敗</th>
+          <th>勝率</th>
+          <th>勝差</th>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td>
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>94</td>
+        </tr>
+        <tr>
+          <td>Adam</td>
+          <td>Johnson</td>
+          <td>67</td>
+        </tr>
+      </table>
+    </div>
+    <div class="column">
+      <table>
+        <tr>
+          <th>球隊</th>
+          <th>出賽數</th>
+          <th>勝-敗</th>
+          <th>勝率</th>
+          <th>勝差</th>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td>
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>94</td>
+        </tr>
+        <tr>
+          <td>Adam</td>
+          <td>Johnson</td>
+          <td>67</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+</div>
+
   <br><br><br><br><br><br>
+
+  
 
   <script src="./main.js"></script>
 </body>
