--- a/main.html
+++ b/main.html
@@ -168,14 +168,33 @@
   <div class="jquery-ui">
     <div id="tabs" class="tabJoined">
       <ul>
-        <li><a href="#tabs-1">Nunc</a></li>
-        <li><a href="#tabs-2">Proin</a></li>
-        <li><a href="#tabs-3">Aenean</a></li>
-        <li><a href="#tabs-4">Aenean</a></li>
-        <li><a href="#tabs-5">Aenean</a></li>
+        <li><a href="#tabs-1">防禦率</a></li>
+        <li><a href="#tabs-2">勝投</a></li>
+        <li><a href="#tabs-3">救援成功</a></li>
+        <li><a href="#tabs-4">中繼成功</a></li>
+        <li><a href="#tabs-5">奪三振</a></li>
       </ul>
       <div id="tabs-1">
-        <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+        <div id="fis">
+          <div id="first-p"><img src="./img/p-montgo.jpeg" alt=""></div>
+          <div class="topERA">
+            <ul>
+              <li>
+                  <div class="player rank1">1</div>
+                  <div class="player p-name"><span>Jordan Montgomery</span></div>
+                  <div class="player num">2.90</div>
+              </li>
+              <li>
+                  <div class="player rank">2</div>
+                  <div class="player p-name"><span>Jordan Montgomery</span></div>
+              </li>
+              <li>
+                  <div class="player rank">3</div>
+                  <div class="player p-name"><span>Jordan Montgomery</span></div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div id="tabs-2">
         <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
@@ -196,11 +215,11 @@
 
     <div id="tabsb" class="tabJoined">
       <ul>
-        <li><a href="#tabs-1">Nuncddd</a></li>
-        <li><a href="#tabs-2">Pddd</a></li>
-        <li><a href="#tabs-3">Aenean</a></li>
-        <li><a href="#tabs-4">Aenean</a></li>
-        <li><a href="#tabs-5">Aenean</a></li>
+        <li><a href="#tabs-1">打擊率</a></li>
+        <li><a href="#tabs-2">安打</a></li>
+        <li><a href="#tabs-3">全壘打</a></li>
+        <li><a href="#tabs-4">打點</a></li>
+        <li><a href="#tabs-5">盜壘</a></li>
       </ul>
       <div id="tabs-1">
         <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
