--- a/test.html
+++ b/test.html
@@ -1,101 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Website Layout</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="https://code.jquery.com/jquery-1.9.0.js"></script>
+  <style>
+      html, body{
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-/* Style the header */
-.header {
-  background-color: #f1f1f1;
-  background-image: url("img/top_bg.jpeg");
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 20px;
-  text-align: center;
+#svg{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+#line{
+  stroke-width:2px;
+  stroke:rgb(0,0,0);
 }
 
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+.point{
+  width: 10px;
+  height: 10px;
+  background: red;
+  position: absolute;
 }
 
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+#one{
+  top: 20px;
+  left: 50px;
 }
 
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 15px;
+#two{
+  bottom: 20px;
+  right: 50px;
 }
-
-/* Clear floats after the columns */
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width:600px) {
-  .column {
-    width: 100%;
-  }
-}
-</style>
+  </style>
 </head>
 <body>
 
-<div class="header">
-  <h1>header</h1>
-  <p>Resize the browser window to see the responsive effect.</p>
-</div>
+<div id="one" class="point"></div>
+<div id="two" class="point"></div>
+<svg id="svg">
+  <line id="line"/>
+</svg>
+ 
 
-<div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-</div>
+<script>
+var line = $('#line');
+var div1 = $('#one');
+var div2 = $('#two');
 
-<div class="row">
-  <div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-  </div>
+var x1 = div1.offset().left + (div1.width()/2);
+var y1 = div1.offset().top + (div1.height()/2);
+var x2 = div2.offset().left + (div2.width()/2);
+var y2 = div2.offset().top + (div2.height()/2);
+
+line.attr('x1',x1).attr('y1',y1).attr('x2',x2).attr('y2',y2);
+</script>
   
-  <div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-  </div>
-  
-  <div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-  </div>
-</div>
-
 </body>
 </html>
