--- a/main.html
+++ b/main.html
@@ -20,13 +20,13 @@
   <div>
     <div class="topnav" id="myTopnav">
       <a id="texlogo" href="#main" ><img src="./img/tlogo.svg" alt=""></a>
-      <a href="#main">首頁</a>
-      <a href="#player">球員</a>
+      <a href="main.html">首頁</a>
+      <a href="player.html">球員</a>
       <a href="#gameResult">比賽結果</a>
       <a href="#postSeason">季後賽</a>
       <a href="#keyMen">關鍵角色</a>
       <a href="#rangers">關於Rangers</a>
-      <a id="logocom" href=""><img src="./img/Rangers_dot_com.svg" alt=""></a>
+      <a id="logocom" href="main.html"><img src="./img/Rangers_dot_com.svg" alt=""></a>
     </div>
   </div>
   <!-- <br> -->
