--- a/player.html
+++ b/player.html
@@ -19,20 +19,21 @@
 
   <div>
     <div class="topnav" id="myTopnav">
-      <a id="texlogo" href="#main" ><img src="./img/tlogo.svg" alt=""></a>
-      <a href="#main">首頁</a>
-      <a href="#player">球員</a>
+      <a id="texlogo" href="main.html" ><img src="./img/tlogo.svg" alt=""></a>
+      <a href="main.html">首頁</a>
+      <a href="player.html">球員</a>
       <a href="#gameResult">比賽結果</a>
       <a href="#postSeason">季後賽</a>
       <a href="#keyMen">關鍵角色</a>
       <a href="#rangers">關於Rangers</a>
-      <a id="logocom" href=""><img src="./img/Rangers_dot_com.svg" alt=""></a>
+      <a id="logocom" href="main.html"><img src="./img/Rangers_dot_com.svg" alt=""></a>
     </div>
   </div>
   <!-- <br> -->
   <div class="outercontainer">
     <div class="top-bg"><img src="./img/2024bg.jpeg"></div>
     <!-- <div class="top-bg"><img src="./img/champion.webp"></div> -->
+    <br><br>
     <div class="top-bg"><img src="./img/mlbad.png"></div>
 
     <br><br>
@@ -46,45 +47,45 @@
         <div id="tabs-1">
           <div class="grid-container">
             <div class="grid-item">
-                <a href="">
+                <a href="#">
                 <div><img src="./img/eovaldi.jpeg"></div>
                 <div><span>SP #17</span></div>
                 <div><span>Nathan Eovaldi</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
-                <div><img src="./img/eovaldi.jpeg"></div>
-                <div><span>SP #17</span></div>
-                <div><span>Nathan Eovaldi</span></div>
+                <a href="#">
+                <div><img src="./img/max.jpeg"></div>
+                <div><span>SP #31</span></div>
+                <div><span>Max Scherzer</span></div>
                 </a>    
             </div>
             <div class="grid-item">
                 <a href="">
-                <div><img src="./img/eovaldi.jpeg"></div>
-                <div><span>SP #17</span></div>
-                <div><span>Nathan Eovaldi</span></div>
+                <div><img src="./img/p-montgo.jpeg"></div>
+                <div><span>SP #52</span></div>
+                <div><span>Jordan Montgomery</span></div>
                 </a>    
             </div>
             <div class="grid-item">
                 <a href="">
-                <div><img src="./img/eovaldi.jpeg"></div>
-                <div><span>SP #17</span></div>
-                <div><span>Nathan Eovaldi</span></div>
+                <div><img src="./img/heaney.jpeg"></div>
+                <div><span>SP #44</span></div>
+                <div><span>Andrew Heaney</span></div>
                 </a>    
             </div>
             <div class="grid-item">
                 <a href="">
-                <div><img src="./img/eovaldi.jpeg"></div>
-                <div><span>SP #17</span></div>
-                <div><span>Nathan Eovaldi</span></div>
+                <div><img src="./img/cody.jpeg"></div>
+                <div><span>SP #61</span></div>
+                <div><span>Cody Bradford</span></div>
                 </a>    
             </div>
             <div class="grid-item">
                 <a href="">
-                <div><img src="./img/eovaldi.jpeg"></div>
-                <div><span>SP #17</span></div>
-                <div><span>Nathan Eovaldi</span></div>
+                <div><img src="./img/dane.jpeg"></div>
+                <div><span>SP #33</span></div>
+                <div><span>Dane Dunning</span></div>
                 </a>    
             </div>
             <div class="grid-item">
