--- a/player/infield.html
+++ b/player/infield.html
@@ -31,7 +31,7 @@
   </div>
   <!-- <br> -->
   <div class="outercontainer">
-    <div>
+    <div class="infield">
         <div id="corey">
             <div>
                 <div class="p-name"><p>Corey Seager #5</p></div>
@@ -41,17 +41,17 @@
         <div id="corey-b">
             <div id="corey-bio">
                 <ul>
-                    <li><caption>個人資料</caption></li>
-                    <li>綽號: Seags</li>
-                    <li>出生日/地: 1994.4.27, Charlotte, NC</li>
-                    <li>選秀: 2012年第一輪18順位, Los Angeles Dodgers</li>
-                    <li>高中: Northwest Cabarrus, Concord, NC</li>
-                    <li>初次登場: 2015.9.03</li>
+                    <li><span class="liTitle">個人資料</span></li>
+                    <li><span class="liTitle">綽號: </span><span class="liContent">Seags</span></li>
+                    <li><span class="liTitle">出生於: </span> <span class="liContent">1994.4.27, Charlotte, NC</span></li>
+                    <li><span class="liTitle">選秀: </span><span class="liContent">2012年第一輪18順位, Los Angeles Dodgers </span></li>
+                    <li><span class="liTitle">高中: </span><span class="liContent">Northwest Cabarrus, Concord, NC</span></li>
+                    <li><span class="liTitle">初次登場: </span><span class="liContent">2015.9.03</span></li>
                 </ul>
             </div>
 
             <div class="column">
-                <table id="alwtb">
+                <table>
                       <tr>
                         <th>年</th>
                         <th>打數</th>
@@ -114,9 +114,179 @@
                       </tr>
                  </table>
             </div>
-
         </div>
     </div>  
+
+    <div class="infield">
+        <div id="jung">
+            <div>
+                <div class="p-name"><p>Josh Jung #16</p></div>
+                <div class="p-data"><p>三壘手 | 右投右打 | 214公分 | 25歲</p></div>
+            </div>  
+        </div>
+        <div id="corey-b">
+            <div id="corey-bio">
+                <ul>
+                    <li><span class="liTitle">個人資料</span></li>
+                    <li><span class="liTitle">出生於: </span> <span class="liContent">1998.2.12, San Antonio, TX</span></li>
+                    <li><span class="liTitle">選秀: </span><span class="liContent">2019年第一輪8順位, Texas Rangers</span></li>
+                    <li><span class="liTitle">大學: </span><span class="liContent">Texas Tech</span></li>
+                    <li><span class="liTitle">初次登場: </span><span class="liContent">2022.9.09</span></li>
+                </ul>
+            </div>
+
+            <div class="column">
+                <table>
+                      <tr>
+                        <th>年</th>
+                        <th>打數</th>
+                        <th>得分</th>
+                        <th>安打</th>
+                        <th>全壘打</th>
+                        <th>打點</th>
+                        <th>盜壘</th>
+                        <th>打擊率</th>
+                        <th>上壘率</th>
+                        <th>整體攻擊指數</th>
+                      </tr>
+                      <tr>
+                        <td>2023季後賽</td>
+                        <td>66</td>
+                        <td>18</td>
+                        <td>21</td>
+                        <td>6</td>
+                        <td>12</td>
+                        <td>0</td>
+                        <td>.318</td>
+                        <td>.451</td>
+                        <td>1.133</td>
+                      </tr>
+                      <tr>
+                        <td>生涯季後賽</td>
+                        <td>299</td>
+                        <td>55</td>
+                        <td>76</td>
+                        <td>19</td>
+                        <td>48</td>
+                        <td>3</td>
+                        <td>.254</td>
+                        <td>.350</td>
+                        <td>.858</td>
+                      </tr>
+                      <tr>
+                        <td>2023例行賽</td>
+                        <td>477</td>
+                        <td>88</td>
+                        <td>156</td>
+                        <td>33</td>
+                        <td>96</td>
+                        <td>2</td>
+                        <td>.327</td>
+                        <td>.390</td>
+                        <td>1.013</td>
+                      </tr>
+                      <tr>
+                        <td>生涯例行賽</td>
+                        <td>3489</td>
+                        <td>573</td>
+                        <td>1019</td>
+                        <td>170</td>
+                        <td>543</td>
+                        <td>17</td>
+                        <td>.292</td>
+                        <td>.361</td>
+                        <td>.873</td>
+                      </tr>
+                 </table>
+            </div>
+        </div>
+    </div>  
+    
+    <div class="infield">
+        <div id="lowe">
+            <div>
+                <div class="p-name"><p>Nathaniel Lowe #52</p></div>
+                <div class="p-data"><p>一壘手 | 右投左打 | 220公分 | 28歲</p></div>
+            </div>  
+        </div>
+        <div id="corey-b">
+            <div id="corey-bio">
+                <ul>
+                    <li><span class="liTitle">個人資料</span></li>
+                    <li><span class="liTitle">出生於: </span> <span class="liContent">1995.7.07, Norfolk, VA</span></li>
+                    <li><span class="liTitle">選秀: </span><span class="liContent">2016年13輪第390順位, Tampa Bay Rays</span></li>
+                    <li><span class="liTitle">大學: </span><span class="liContent">Mississippi State</span></li>
+                    <li><span class="liTitle">初次登場: </span><span class="liContent">2019.4.29</span></li>
+                </ul>
+            </div>
+
+            <div class="column">
+                <table>
+                      <tr>
+                        <th>年</th>
+                        <th>打數</th>
+                        <th>得分</th>
+                        <th>安打</th>
+                        <th>全壘打</th>
+                        <th>打點</th>
+                        <th>盜壘</th>
+                        <th>打擊率</th>
+                        <th>上壘率</th>
+                        <th>整體攻擊指數</th>
+                      </tr>
+                      <tr>
+                        <td>2023季後賽</td>
+                        <td>66</td>
+                        <td>18</td>
+                        <td>21</td>
+                        <td>6</td>
+                        <td>12</td>
+                        <td>0</td>
+                        <td>.318</td>
+                        <td>.451</td>
+                        <td>1.133</td>
+                      </tr>
+                      <tr>
+                        <td>生涯季後賽</td>
+                        <td>299</td>
+                        <td>55</td>
+                        <td>76</td>
+                        <td>19</td>
+                        <td>48</td>
+                        <td>3</td>
+                        <td>.254</td>
+                        <td>.350</td>
+                        <td>.858</td>
+                      </tr>
+                      <tr>
+                        <td>2023例行賽</td>
+                        <td>477</td>
+                        <td>88</td>
+                        <td>156</td>
+                        <td>33</td>
+                        <td>96</td>
+                        <td>2</td>
+                        <td>.327</td>
+                        <td>.390</td>
+                        <td>1.013</td>
+                      </tr>
+                      <tr>
+                        <td>生涯例行賽</td>
+                        <td>3489</td>
+                        <td>573</td>
+                        <td>1019</td>
+                        <td>170</td>
+                        <td>543</td>
+                        <td>17</td>
+                        <td>.292</td>
+                        <td>.361</td>
+                        <td>.873</td>
+                      </tr>
+                 </table>
+            </div>
+        </div>
+    </div>  
+
 </div>
 
   <br><br><br><br><br><br><br><br><br><br>
