--- a/player/infield.html
+++ b/player/infield.html
@@ -498,11 +498,9 @@
           <ul>
             <li><span class="liTitle">個人資料</span></li>
             <li><span class="liTitle">綽號: </span> <span class="liContent">Hedgey</span></li>
-            <li><span class="liTitle">出生於: </span> <span class="liContent">1992.8.18, San Juan Capistrano, CA</span>
-            </li>
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1992.8.18, San Juan Capistrano, CA</span></li>
             <li><span class="liTitle">選秀: </span><span class="liContent">2011年2輪82順位, San Diego Padres</span></li>
-            <li><span class="liTitle">高中: </span><span class="liContent">Junipero Serra, San Juan Capistrano, CA</span>
-            </li>
+            <li><span class="liTitle">高中: </span><span class="liContent">Junipero Serra, San Juan Capistrano, CA</span></li>
             <li><span class="liTitle">初次登場: </span><span class="liContent">2015.5.04</span></li>
           </ul>
         </div>
@@ -568,6 +566,97 @@
               <td>.189</td>
               <td>.246</td>
               <td>.567</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="infield">
+      <div id="graver">
+        <div>
+          <div class="p-name">
+            <p>Mitch Garver #18</p>
+          </div>
+          <div class="p-data">
+            <p>捕手 | 右投右打 | 220公分 | 32歲</p>
+          </div>
+        </div>
+      </div>
+      <div id="corey-b">
+        <div id="corey-bio">
+          <ul>
+            <li><span class="liTitle">個人資料</span></li>
+            <li><span class="liTitle">綽號: </span> <span class="liContent">Garv Sauce</span></li>
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1991.1.15, Albuquerque, NM</span></li>
+            <li><span class="liTitle">選秀: </span><span class="liContent">2013年9輪260順位, Minnesota Twins</span></li>
+            <li><span class="liTitle">大學: </span><span class="liContent">University of New Mexico </span></li>
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2017.8.19</span></li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <table>
+            <tr>
+              <th>年</th>
+              <th>打數</th>
+              <th>得分</th>
+              <th>安打</th>
+              <th>全壘打</th>
+              <th>打點</th>
+              <th>盜壘</th>
+              <th>打擊率</th>
+              <th>上壘率</th>
+              <th>整體攻擊指數</th>
+            </tr>
+            <tr>
+              <td>2023季後賽</td>
+              <td>53</td>
+              <td>8</td>
+              <td>12</td>
+              <td>3</td>
+              <td>14</td>
+              <td>0</td>
+              <td>.226</td>
+              <td>.317</td>
+              <td>.751</td>
+            </tr>
+            <tr>
+              <td>生涯季後賽</td>
+              <td>66</td>
+              <td>9</td>
+              <td>14</td>
+              <td>3</td>
+              <td>15</td>
+              <td>0</td>
+              <td>.212</td>
+              <td>.297</td>
+              <td>.676</td>
+            </tr>
+            <tr>
+              <td>2023例行賽</td>
+              <td>296</td>
+              <td>45</td>
+              <td>80</td>
+              <td>19</td>
+              <td>50</td>
+              <td>0</td>
+              <td>.270</td>
+              <td>.370</td>
+              <td>.870</td>
+            </tr>
+            <tr>
+              <td>生涯例行賽</td>
+              <td>1422</td>
+              <td>218</td>
+              <td>359</td>
+              <td>82</td>
+              <td>228</td>
+              <td>2</td>
+              <td>.252</td>
+              <td>.342</td>
+              <td>.825</td>
             </tr>
           </table>
         </div>
