--- a/player/infield.html
+++ b/player/infield.html
@@ -663,6 +663,9 @@
       </div>
     </div>
 
+
+    <div class="top-bg"><img src="../img/mlbad.png"></div>
+
   </div>
 
   <br><br><br><br><br><br><br><br><br><br>
