--- a/player.html
+++ b/player.html
@@ -22,7 +22,7 @@
       <a id="texlogo" href="main.html" ><img src="./img/tlogo.svg" alt=""></a>
       <a href="main.html">首頁</a>
       <a href="player.html">球員</a>
-      <a href="#gameResult">比賽結果</a>
+      <a href="./game/game.html">比賽結果</a>
       <a href="#postSeason">季後賽</a>
       <a href="#keyMen">關鍵角色</a>
       <a href="#rangers">關於Rangers</a>
