--- a/game/game.html
+++ b/game/game.html
@@ -37,32 +37,84 @@
             <div id="box">
                 <div id="left-team"><img src="../img/rangrs-box.png"></div>
                 <div class="column">
-                    <table id="wctb">
-                      <caption>Game 1</caption>
-                      <tr>
+                    <table>
+                        <caption>Game 1</caption>
+                      <tr id="game-1">
                         <th></th>
-                        <th>出賽數</th>
-                        <th>勝 - 敗</th>
-                        <th>勝率</th>
-                        <th>外卡勝差</th>
+                        <th>1</th>
+                        <th>2</th>
+                        <th>3</th>
+                        <th>4</th>
+                        <th>5</th>
+                        <th>6</th>
+                        <th>7</th>
+                        <th>8</th>
+                        <th>9</th>
+                        <th>10</th>
+                        <th>11</th>
+                        <th>R</th>
+                        <th>H</th>
+                        <th>E</th>
                       </tr>
                       <tr>
-                        <td><img src="../img/tex-box-logo.png"></td>
-                        <td>162</td>
-                        <td>99 - 63</td>
-                        <td>.611</td>
-                        <td>+10.0</td>
+                        <td>AZ</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>5</td>
+                        <td>8</td>
+                        <td>0</td>
                       </tr>
                       <tr>
-                        <td><img src="../img/d-backs-box-logo.png" ></td>
-                        <td>162</td>
-                        <td>90 - 72</td>
-                        <td>.556</td>
-                        <td>+1.0</td>
+                        <td>TEX</td>
+                        <td>2</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>6</td>
+                        <td>9</td>
+                        <td>0</td>
                       </tr>
                     </table>
                   </div>
                 <div id="right-team"><img src="../img/d-backs-box.png"></div>
+            </div>
+            <div class="bot-box">
+              <div class="bot bot-1">
+                <span>勝投: </span>
+                <span>José Leclerc</span>
+                <span>1-1</span>
+                <span>3.65 </span>
+                <span>ERA</span>
+              </div>
+              <div class="bot bot-2">
+                <span>敗投: </span>
+                <span>Miguel Castro</span>
+                <span>0-1</span>
+                <span>7.20 </span>
+                <span>ERA</span>
+              </div>
+              <div class="bot bot-4">
+                <span>TEX wins 6 : 5</span>
+              </div>
+              <div class="bot bot-3">
+                <span>全球人壽球場(home: TEX)</span>
+              </div>
             </div>
         </div>
         
