--- a/test.html
+++ b/test.html
@@ -4,67 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://code.jquery.com/jquery-1.9.0.js"></script>
   <style>
-      html, body{
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
-
-#svg{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-#line{
-  stroke-width:2px;
-  stroke:rgb(0,0,0);
-}
-
-.point{
-  width: 10px;
-  height: 10px;
-  background: red;
-  position: absolute;
-}
-
-#one{
-  top: 20px;
-  left: 50px;
-}
-
-#two{
-  bottom: 20px;
-  right: 50px;
-}
+    .contain { display: flex; }
+.item { display: flex; flex: 1; }
+.item > span { overflow: hidden; word-wrap: break-word; }
+.item1 > span { margin-right: auto; }
+.item3 > span { margin-left: auto; }
   </style>
 </head>
 <body>
 
-<div id="one" class="point"></div>
-<div id="two" class="point"></div>
-<svg id="svg">
-  <line id="line"/>
-</svg>
- 
-
-<script>
-var line = $('#line');
-var div1 = $('#one');
-var div2 = $('#two');
-
-var x1 = div1.offset().left + (div1.width()/2);
-var y1 = div1.offset().top + (div1.height()/2);
-var x2 = div2.offset().left + (div2.width()/2);
-var y2 = div2.offset().top + (div2.height()/2);
-
-line.attr('x1',x1).attr('y1',y1).attr('x2',x2).attr('y2',y2);
-</script>
+  <div class="contain">
+    <div class="item item1"> <span>item1</span> </div>
+    <div class="item item2"> <span>item2</span> </div>
+    <div class="item item3"> <span>item3 </span> </div>
+  </div>
   
 </body>
 </html>
