--- a/player/infield.html
+++ b/player/infield.html
@@ -26,7 +26,7 @@
       <a href="../player.html">球員</a>
       <a href="../game/game.html">比賽結果</a>
       <a href="#postSeason">季後賽</a>
-      <a href="#keyMen">關鍵角色</a>
+      <!-- <a href="#keyMen">關鍵角色</a> -->
       <a href="#rangers">關於Rangers</a>
       <a id="logocom" href="main.html"><img src="../img/Rangers_dot_com.svg" alt=""></a>
     </div>
