--- a/post-season/post-season.html
+++ b/post-season/post-season.html
@@ -92,7 +92,7 @@
                 <div class="empty">&nbsp;</div>
 
             </div>
-
+            <br>
             <h2 class="inarticle">晉級表</h2>
             <div id="bracket">
                 <table border="0" cellpadding="0" cellspacing="0" style="font-size:90%; margin:1em auto 1em auto;">
@@ -163,7 +163,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;"> 1</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><span class="mw-redirect" title="巴爾的摩金鶯">巴爾的摩金鶯</span>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/baltimore-log.svg" style="width: 18px; height: 18px;"><span class="mw-redirect" title="巴爾的摩金鶯">&nbsp;巴爾的摩金鶯</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">0
                     </td>
@@ -174,7 +175,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">4</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><span title="坦帕灣光芒">坦帕灣光芒</span>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/tampa-logo.svg" style="width: 18px; height: 18px;"><span title="坦帕灣光芒">&nbsp;坦帕灣光芒</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">0
                     </td>
@@ -184,7 +186,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">5</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><b><span title="德州遊騎兵">德州遊騎兵</span></b>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/rangers.svg" style="width: 18px; height: 18px;"><span title="德州遊騎兵">&nbsp;德州遊騎兵</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">3
                     </td>
@@ -197,7 +200,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;"> 5</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><b><span title="德州遊騎兵">德州遊騎兵</span></b>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/rangers.svg" style="width: 18px; height: 18px;"><span title="德州遊騎兵">&nbsp;德州遊騎兵</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">2
                     </td>
@@ -211,7 +215,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">5</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><b><span title="德州遊騎兵">德州遊騎兵</span></b>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/rangers.svg" style="width: 18px; height: 18px;"><span title="德州遊騎兵">&nbsp;德州遊騎兵</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">4
                     </td>
@@ -226,7 +231,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;"> 2</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><span title="休士頓太空人">休士頓太空人</span>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/astro.svg" style="width: 18px; height: 18px; "><span title="休士頓太空人">&nbsp;休士頓太空人</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">3
                     </td>
@@ -245,7 +251,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">2</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><b><span title="休士頓太空人">休士頓太空人</span></b>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/astro.svg" style="width: 18px; height: 18px;"><span title="休士頓太空人">&nbsp;休士頓太空人</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">3
                     </td>
@@ -258,7 +265,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">3</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><b><span class="mw-redirect" title="明尼蘇達雙城">明尼蘇達雙城</span></b>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/twins-logo.svg" style="width: 18px; height: 18px;"><span class="mw-redirect" title="明尼蘇達雙城">&nbsp;明尼蘇達雙城</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">2
                     </td>
@@ -268,7 +276,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">3</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><span class="mw-redirect" title="明尼蘇達雙城">明尼蘇達雙城</span>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/twins-logo.svg" style="width: 18px; height: 18px;"><span class="mw-redirect" title="明尼蘇達雙城">&nbsp;明尼蘇達雙城</span>
                     </td>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">1
                     </td>
@@ -279,8 +288,8 @@
                     </td>
                     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">6</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><span title="多倫多藍鳥">多倫多藍鳥</span>
-                    </td>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/jays.svg" style="width: 18px; height: 18px;"><span title="多倫多藍鳥">&nbsp;多倫多藍鳥</span>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">0
                     </td>
                     <td style="border-width:1px 0 0 0; border-style:solid;border-color:black;">&nbsp;
@@ -289,10 +298,10 @@
                     </td>
                     <td style="border-width:0 0 0 0; border-style:solid;border-color:black;">&nbsp;
                     </td>
-                    <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">AL5</span>
+                    <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;">A5</span>
                     </td>
-                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><b><span title="德州遊騎兵">德州遊騎兵</span></b>
-                    </td>
+                    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;">
+                        <img src="../img/rangers.svg" style="width: 18px; height: 18px;"><span title="德州遊騎兵">&nbsp;德州遊騎兵</span>
                     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">4
                     </td></tr>
                     <tr>
@@ -300,9 +309,10 @@
                     </td>
                     <td style="border-width:0 0 0 0; border-style:solid;border-color:black;">&nbsp;
                     </td>
-                    <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">NL6</span>
+                    <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">N6</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><span title="亞利桑那響尾蛇">亞利桑那響尾蛇</span>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/d-backs-logo.svg" style="width: 18px; height: 18px;"><span title="亞利桑那響尾蛇">&nbsp;亞利桑那響尾蛇</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">1
                     </td></tr>
@@ -317,7 +327,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">1</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><span title="亞特蘭大勇士">亞特蘭大勇士</span>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/braves-logo.svg" style="width: 18px; height: 18px;"><span title="亞特蘭大勇士">&nbsp;亞特蘭大勇士</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">1
                     </td>
@@ -328,7 +339,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">4</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><b><span title="">費城費城人</span></b>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/d-backs-logo.svg" style="width: 18px; height: 18px;"><span title="">&nbsp;費城費城人</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">2
                     </td>
@@ -338,7 +350,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;"> 4</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><b><span title="費城費城人">費城費城人</span></b>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/d-backs-logo.svg" style="width: 18px; height: 18px;"><span title="">&nbsp;費城費城人</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">3
                     </td>
