--- a/test.html
+++ b/test.html
@@ -137,7 +137,7 @@
     </td>
     <td style="text-align:center; background-color:#8b0000; border:1px solid #600;"><span style="color:#ffffff;"> 2</span>
     </td>
-    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em;"><span title="休士頓太空人">休士頓太空人</span>
+    <td style="background-color:#ffaeb9; border:1px solid #600; padding-left:0.3em; display: flex;"><span title="休士頓太空人">休士頓太空人</span><img src="./img/astro.svg" style="width: 20px; height: 20px;">
     </td>
     <td style="text-align:center; border:1px solid #600; background-color:#ffaeb9;">3
     </td>
