--- a/post-season/post-season.html
+++ b/post-season/post-season.html
@@ -364,7 +364,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;"> 5</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><span title="邁阿密馬林魚">邁阿密馬林魚</span>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/miami-logo.svg" style="width: 18px; height: 18px;"><span title="邁阿密馬林魚">&nbsp;邁阿密馬林魚</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">0
                     </td>
@@ -378,7 +379,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">4</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><span title="費城費城人">費城費城人</span>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/phily-logo.svg" style="width: 18px; height: 18px;"><span title="">&nbsp;費城費城人</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">3
                     </td>
@@ -393,7 +395,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;"> 6</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><b><span title="亞利桑那響尾蛇">亞利桑那響尾蛇</span></b>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/d-backs-logo.svg" style="width: 18px; height: 18px;"><span title="亞利桑那響尾蛇">&nbsp;亞利桑那響尾蛇</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">4
                     </td>
@@ -410,7 +413,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">2</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><span class="mw-redirect" title="洛杉磯道奇">洛杉磯道奇</span>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;">
+                        <img src="../img/dodges-log.svg" style="width: 18px; height: 18px;"><span class="mw-redirect" title="洛杉磯道奇">&nbsp;洛杉磯道奇</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">0
                     </td>
@@ -423,7 +427,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;"> 3</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><span title="密爾瓦基釀酒人">密爾瓦基釀酒人</span>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/brewer-logo.svg" style="width: 18px; height: 18px;"><span title="密爾瓦基釀酒人">&nbsp;密爾瓦基釀酒人</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">0
                     </td>
@@ -433,7 +438,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">6</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><b><span title="亞利桑那響尾蛇">亞利桑那響尾蛇</span></b>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/d-backs-logo.svg" style="width: 18px; height: 18px;"><span title="亞利桑那響尾蛇">&nbsp;亞利桑那響尾蛇</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">3
                     </td>
@@ -444,7 +450,8 @@
                     </td>
                     <td style="text-align:center; background-color:#00008b; border:1px solid #006;"><span style="color:#ffffff;">6</span>
                     </td>
-                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em;"><b><span title="亞利桑那響尾蛇">亞利桑那響尾蛇</span></b>
+                    <td style="background-color:#87cefa; border:1px solid #006; padding-left:0.3em; display: flex;">
+                        <img src="../img/d-backs-logo.svg" style="width: 18px; height: 18px;"><span title="亞利桑那響尾蛇">&nbsp;亞利桑那響尾蛇</span>
                     </td>
                     <td style="text-align:center; background-color:#87cefa; border:1px solid #006;">2
                     </td>
