11/13 player to infield link

--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
       <a href="main.html">首頁</a>
       <a href="player.html">球員</a>
       <a href="./game/game.html">比賽結果</a>
-      <a href="#postSeason">季後賽</a>
+      <a href="./post-season/post-season.html">季後賽</a>
       <!-- <a href="#keyMen">關鍵角色</a> -->
       <a href="#rangers">關於Rangers</a>
       <a id="logocom" href="main.html"><img src="./img/Rangers_dot_com.svg" alt=""></a>
@@ -63,7 +63,7 @@
 
   <div id="bracket">
     <h1>2023MLB季後賽分組</h1>
-    <img src="./img/bracket.jpeg" alt="">
+    <img src="./img/bracket.jpeg">
   </div>
   <br><br>
   <div id="standings">
