--- a/player.html
+++ b/player.html
@@ -23,7 +23,7 @@
       <a href="main.html">首頁</a>
       <a href="player.html">球員</a>
       <a href="./game/game.html">比賽結果</a>
-      <a href="#postSeason">季後賽</a>
+      <a href="./post-season/post-season.html">季後賽</a>
       <!-- <a href="#keyMen">關鍵角色</a> -->
       <a href="#rangers">關於Rangers</a>
       <a id="logocom" href="main.html"><img src="./img/Rangers_dot_com.svg" alt=""></a>
@@ -151,49 +151,49 @@
         <div id="tabs-2">
             <div class="grid-container">
                 <div class="grid-item">
-                    <a href="#">
+                    <a href="./player/infield.html#marcus" target="_blank">
                     <div><img src="./img/semiem.jpeg"></div>
                     <div><span>2B #2</span></div>
                     <div><span>Marcus Semien</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="#">
+                    <a href="./player/infield.html#lowe" target="_blank">
                     <div><img src="./img/lowe.jpeg"></div>
                     <div><span>1B #30</span></div>
                     <div><span>Nathaniel Lowe</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/infield.html#corey" target="_blank">
                     <div><img src="./img/seager.jpeg"></div>
                     <div><span>SS #5</span></div>
                     <div><span>Corey Seager</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/infield.html#jung" target="_blank">
                     <div><img src="./img/jung.jpeg"></div>
                     <div><span>3B #6</span></div>
                     <div><span>Josh Jung</span></div>
                     </a>   
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/infield.html#heim" target="_blank">
                     <div><img src="./img/heim.jpeg"></div>
                     <div><span>C #28</span></div>
                     <div><span>Jonah Heim</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/infield.html#graver" target="_blank">
                     <div><img src="./img/mitch.jpeg"></div>
                     <div><span>C #18</span></div>
                     <div><span>Mitch Graver</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/infield.html#hedges" target="_blank">
                     <div><img src="./img/austin.jpeg"></div>
                     <div><span>C #11</span></div>
                     <div><span>Austin Hedges</span></div>
