--- a/post-season/post-season.html
+++ b/post-season/post-season.html
@@ -24,8 +24,8 @@
             <a id="texlogo" href="../main.html"><img src="../img/tlogo.svg" alt=""></a>
             <a href="../main.html">首頁</a>
             <a href="../player.html">球員</a>
-            <a href="#gameResult">比賽結果</a>
-            <a href="#postSeason">季後賽</a>
+            <a href="../game/game.html">比賽結果</a>
+            <a href="../post-season/post-season.html">季後賽</a>
             <!-- <a href="#keyMen">關鍵角色</a> -->
             <a href="#rangers">關於Rangers</a>
             <a id="logocom" href="../main.html"><img src="../img/Rangers_dot_com.svg" alt=""></a>
@@ -36,7 +36,7 @@
         <br><br><br><br>
         <article>
             <h1 class="inarticle">2023年美國職棒大聯盟季後賽</h1>
-            <br>
+            <br><br>
             <h2 class="inarticle">賽制與簡介</h2>
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
@@ -94,6 +94,9 @@
             </div>
             <br>
             <h2 class="inarticle">晉級表</h2>
+            <br>
+            <div id="bracket-img"><img src="../img/bracket.jpeg"></div>
+            <br>
             <div id="bracket">
                 <table border="0" cellpadding="0" cellspacing="0" style="font-size:90%; margin:1em auto 1em auto;">
                     <tbody><tr>
@@ -461,6 +464,11 @@
                     </td>
                     <td style="border-width:0 0 0 0; border-style:solid;border-color:black;">&nbsp;
                     </td></tr></tbody></table>
+            </div>
+
+            <h2 class="inarticle">季後賽戰況</h2>
+            <div>
+
             </div>
         </article>
 
